# display-bridge

./: .gitignore  README.md  TESTING.md  error.md  gen_edid.py
mac/: Package.swift
mac/Resources/: Info.plist
mac/Sources/CSRT/: module.modulemap  srt_shim.h
mac/Sources/DisplayBridgeReceiver/: AppDelegate.swift  HEVCDecoder.swift  InputForwarder.swift  MetalRenderer.swift  Protocol.swift  SRTReceiver.swift  ServiceDiscovery.swift  ViewController.swift  main.swift
scripts/: apply_monitors.py  setup-mac.sh  start-receiver.sh  start-sender.sh  swap_vkms.py
shared/: protocol.h
tests/: test_encode_only.c  test_loopback.c  test_pipewire_capture.c  test_srt.c  test_vaapi_encode.c
tools/: inject_edid.c  set_mode.c
ubuntu/: meson.build
ubuntu/include/: capture.h  discovery.h  encoder.h  input.h  streamer.h
ubuntu/src/: capture.c  discovery.c  encoder.c  input.c  main.c  streamer.c
ubuntu/vkms-patched/: Makefile  vkms_connector.c
